# pinn-implementation

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/agents/: test-coverage-auditor.md
.claude/rules/: code-style.md
.claude/skills/explore-codebase/: SKILL.md
.claude/skills/explore-codebase/scripts/: repo_map.py
.github/: dependabot.yml  settings.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
benchmarks/: matmul_bench.py  triton_matmul.py
configs/: config.yaml
configs/train/: default.yaml
docs/report/: Makefile  report.tex  report_ru.tex
examples/: reference_pytorch.py
scripts/: make_figures.py
src/pinn/: __init__.py  config_schema.py  run.py  train.py
src/pinn/backend/: __init__.py  cpu.py  cuda.py  kernels.py  memory.py
src/pinn/core/: __init__.py  tensor.py
src/pinn/nn/: __init__.py  layers.py  optim.py
src/pinn/pde/: __init__.py  analytic.py  heat.py
tests/: conftest.py  test_analytic.py  test_api_stability.py  test_autograd.py  test_cpu_backend.py  test_cuda_backend.py  test_heat.py  test_memory.py  test_nn.py  test_optim.py  test_pinn.py  test_train_driver.py
tests/tools/: test_check_banners.py  test_check_device.py  test_check_imports.py  test_flagged_mutants.py
tools/pre_commit/: check_banners.py  check_device.py  check_imports.py
tools/test_utils/: flagged_mutants.py
