[project]
name = "pinn"
version = "0.1.0"
description = "PINN from scratch: a minimal autograd + CUDA runtime to understand what's under PyTorch"
authors = [{ name = "Nikita Sviridov", email = "nikswirlo@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (>=2.0,<3.0)",
    "numba (>=0.60,<1.0)",
]

[project.optional-dependencies]
# Plotting / figure generation (kaleido exports plotly figures to PNG).
viz = [
    "matplotlib (>=3.9,<4.0)",
    "plotly (>=5.22,<6.0)",
    "kaleido (==0.2.1)",
]
# Reference implementation on a modern framework (heavy, optional).
reference = [
    "torch (>=2.3,<3.0)",
]

[tool.poetry]
packages = [{ include = "pinn", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
ruff = "^0.6"
pytest-cov = "^7.1.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cuda: tests that require an NVIDIA GPU with CUDA (skipped otherwise)",
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
