[project]
name = "pinn"
version = "0.1.0"
description = "PINN from scratch: a minimal autograd + CUDA runtime to understand what's under PyTorch"
authors = [{ name = "Nikita Sviridov", email = "nikswirlo@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.0,<3.0",
    "numba>=0.60,<1.0",
    "hydra-core>=1.3.3,<2.0.0",
]

[project.optional-dependencies]
# Plotting / figure generation (kaleido exports plotly figures to PNG).
viz = [
    "matplotlib>=3.9,<4.0",
    "plotly>=5.22,<6.0",
    "kaleido==0.2.1",
]
# Reference implementation on a modern framework (heavy, optional).
reference = [
    "torch>=2.3,<3.0",
]

[project.scripts]
pinn = "pinn.run:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "mutmut>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "pre-commit>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Let the standalone tool scripts (not a package) be imported by their tests.
pythonpath = ["tools/pre_commit", "tools/test_utils"]
markers = [
    "cuda: tests that require an NVIDIA GPU with CUDA (skipped otherwise)",
]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
# `I` (isort) is intentionally off: it sorts imports alphabetically by its own
# sectioning, which fights the by-length four-block import scheme (code-style §6).
select = ["E", "F", "UP", "B", "SIM", "C4", "PT"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tools"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# numba ships no type stubs / py.typed marker, so its imports are untyped.
[[tool.mypy.overrides]]
module = ["numba"]
ignore_missing_imports = true

# The CUDA backend and its kernels are numba `@cuda.jit` device code working on
# numba device arrays (no stubs): their signatures are device intrinsics that
# strict mypy cannot express. Exempt only these two modules from strict typing.
[[tool.mypy.overrides]]
module = ["pinn.backend.cuda", "pinn.backend.kernels"]
ignore_errors = true

[tool.mutmut]
# Mutate only the library code; the tool scripts are exercised by their own
# tests, not the science core that mutation testing is here to protect.
source_paths = ["src/pinn/"]

[tool.coverage.run]
branch = true
source = ["pinn", "tools"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pinn"]
